# EQ_Controller

./: .clang-format  .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  EQ_CONTROLLER Debug.launch  EQ_CONTROLLER.ioc
App/: bitmaps.h
App/Inc/: eqm_settings.h
App/Screens/Inc/: menu_flow.h
App/Screens/Src/: screen_contrast_time.c  screen_declination.c  screen_hemisphere.c  screen_monitor.c  screen_tgt_selector.c
App/Src/: main.c
App/Src/Screens/: screen_contrast_time.c  screen_contrast_val.c  screen_declination.c  screen_hemisphere.c  screen_main_menu.c  screen_mode_confirm.c  screen_mode_menu.c  screen_monitor.c  screen_right_ascension.c  screen_tgt_confirm.c  screen_tgt_selector.c  screen_update_home_confirm.c
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  variables.h
Core/Inc/Backup/: main.h.bak  rotary_events.h.bak
Core/Src/: adc.c  gpio.c  main.c  rotary_events.c  rtc.c  spi.c  stm32f1xx_it.c  tim.c
Core/Src/Backup/: astro_targets.c.bak  gpio.c.bak  main.c.bak  stm32f1xx_it.c.bak
Debug/: EQ_CONTROLLER.elf  EQ_CONTROLLER.list  EQ_CONTROLLER.map  makefile  objects.list  sources.mk
Debug/Core/Src/: adc.d  astro_targets.d  astro_targets.su  gpio.d  i2c.d  main.d  main.su  rotary_events.d  rotary_events.su  spi.d  stm32f1xx_hal_msp.d  stm32f1xx_it.d  stm32f1xx_it.su  subdir.mk  system_stm32f1xx.d
Drivers/Display/Inc/: bitmaps.h  fonts.h  horse_running.h  sh1106.h
Drivers/Display/Src/: fonts.c  (+1 more)
EQ_CONTROLLER/: .cproject  EQ_CONTROLLER.ioc
boards/: stm32_min_dev_blue.overlay
src/: main.c
(+88 files in other folders)
